swagger-rxjava: compile native-image fails
Using Args= \
    -Dfile.encoding=UTF-8 \
    -H:ReflectionConfigurationResources=${.}/reflect-config.json \
    -H:+PrintAnalysisCallTree \
    -H:+TraceClassInitialization \
    -H:+ReportExceptionStackTraces \
    -H:+StackTrace \
    -H:+JNI \
    -H:+AddAllCharsets \
    --enable-url-protocols=http,https \
    --enable-all-security-services \
    --allow-incomplete-classpath \
    --report-unsupported-elements-at-runtime \
    --no-fallback \
    --no-server \
    --verbose \
    --initialize-at-build-time=net.jbw.openproject.client.api.UsersApi

Fatal error: com.oracle.svm.core.util.VMError$HostedError: com.oracle.svm.core.util.UserError$UserException:
Static field or an object referenced from a static field changed during native image generation?
object:java.lang.ref.SoftReference@19ecfb89 of class: java.lang.ref.SoftReference